fix footer overlapping

--- a/cardMakerFE/src/routes/styles.css
+++ b/cardMakerFE/src/routes/styles.css
@@ -238,7 +238,7 @@ input, textarea, select, button { font-family:inherit; }
 }
 
 .footer-block {
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
     width: 100%;
